--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
