--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "yarn dev",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
+    "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0",
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
     "gatsby": "^2.23.12",
