--- a/.github/workflows/gatsby_publish.yml
+++ b/.github/workflows/gatsby_publish.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Gatsby Publish
 
 # Controls when the action will run. 
 on:
@@ -20,8 +20,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Gatsby Publish
-        uses: enriikke/gatsby-gh-pages-action@v2.1.1
+      - uses: actions/checkout@v1
+      - uses: enriikke/gatsby-gh-pages-action@v2.1.1
         with:
           # A personal access token needed to push your site after it has been built.
           access-token: ${{ secrets.ACCESS_TOKEN }}
