--- a/.github/workflows/gatsby_publish.yml
+++ b/.github/workflows/gatsby_publish.yml
@@ -25,3 +25,4 @@ jobs:
         with:
           # A personal access token needed to push your site after it has been built.
           access-token: ${{ secrets.ACCESS_TOKEN }}
+          gatsby-args: ''
